--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "JobsQueueCodingChallengeForMassdrop",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
-  "author": "",
+  "author": "Mansi",
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
     "express.js": "^1.0.0",
     "mongoose": "^5.0.12",
     "request": "^2.85.0",
     "request-promise": "^4.2.2"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.5"
   }
 }
